[package]
name = "cgroup_traffic"
version = "0.1.1"
authors = ["arloor <admin@arloor.com>"]
edition = "2021"

[lib]
path = "src/lib.rs" # 

[[example]]
name = "ex_cgroup_traffic"
path = "examples/ex_cgroup_traffic.rs"


[dependencies]
libc.workspace = true                                      # Raw FFI bindings to platform libraries like libc
libbpf-rs = { version = "0.24", default-features = false } # libbpf-rs is a safe, idiomatic, and opinionated wrapper around libbpf-sys
plain.workspace = true                                     # A small Rust library that allows users to reinterpret data of certain types safely
pnet = "0.35"                                              # Rust library for low level networking using the pcap library
log.workspace = true
[dev-dependencies]
env_logger = "0.11"

[build-dependencies]
libbpf-cargo = "0.24"                           # Cargo plugin to build bpf programs
vmlinux = { workspace = true, optional = true }

[features]
default = ["libbpf-rs/default"]
vendored = ["libbpf-rs/vendored"]
static = ["libbpf-rs/static"]
remote-vmlinux = ["vmlinux"]
