[package]
name = "cgroup_traffic"
version = "0.1.4"
authors = ["arloor <admin@arloor.com>"]
edition = "2021"
license = "LGPL-2.1-only OR BSD-2-Clause"
rust-version = "1.71"
repository = "https://github.com/arloor/bpf_rs_hub"
homepage = "https://github.com/arloor/bpf_rs_hub/tree/master/cgroup_traffic"
description = "A simple bpf program to monitor process traffic by cgroup_skb/egress and cgroup_skb/ingress"
keywords = ["cgroup_skb", "libbpf"]
readme = "README.md"

[lib]
path = "src/lib.rs"

[[example]]
name = "ex_cgroup_traffic"
path = "examples/ex_cgroup_traffic.rs"


[dependencies]
libc.workspace = true                                      # Raw FFI bindings to platform libraries like libc
libbpf-rs = { version = "0.24", default-features = false } # libbpf-rs is a safe, idiomatic, and opinionated wrapper around libbpf-sys
plain.workspace = true                                     # A small Rust library that allows users to reinterpret data of certain types safely
log.workspace = true
[dev-dependencies]
env_logger = "0.11"

[build-dependencies]
libbpf-cargo = "0.24" # Cargo plugin to build bpf programs

[features]
default = ["libbpf-rs/default"]
vendored = ["libbpf-rs/vendored"]
static = ["libbpf-rs/static"]
