[package]
name = "socket_filter"
version = "0.1.0"
authors = ["arloor <admin@arloor.com>"]
edition = "2021"

[lib]
path = "src/lib.rs" # 库文件的路径

[[example]]
name = "example1"
path = "examples/example1.rs"

[dependencies]
libc.workspace = true                                      # Raw FFI bindings to platform libraries like libc
libbpf-rs = { workspace = true, default-features = false } # libbpf-rs is a safe, idiomatic, and opinionated wrapper around libbpf-sys
plain.workspace = true                                     # A small Rust library that allows users to reinterpret data of certain types safely
pnet = "0.34"                                              # Rust library for low level networking using the pcap library
log.workspace = true

[build-dependencies]
libbpf-cargo = { workspace = true } # Cargo plugin to build bpf programs
vmlinux = { workspace = true }

[features]
default = ["libbpf-rs/default"]
vendored = ["libbpf-rs/vendored"]
static = ["libbpf-rs/static"]