[package]
name = "trace_conn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libbpf-rs = { workspace = true, default-features = false }
plain.workspace = true
libc.workspace = true
object = "0.36"

[build-dependencies]
libbpf-cargo = { workspace = true } # Cargo plugin to build bpf programs
# vmlinux = { workspace = true ,optional = true}


[features]
default = ["libbpf-rs/default"]
vendored = ["libbpf-rs/vendored"]
static = ["libbpf-rs/static"]
# remote-vmlinux=["vmlinux"]