[package]
name = "trace_conn"
version = { workspace = true }
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libbpf-rs = { workspace = true }
plain.workspace = true
libc.workspace = true
object = "0.36"

[build-dependencies]
libbpf-cargo = { workspace = true }             # Cargo plugin to build bpf programs
vmlinux = { workspace = true, optional = true }


[features]
default = []
vendored = ["libbpf-rs/vendored"]
static = ["libbpf-rs/static"]
remote-vmlinux = ["vmlinux"]
